fix react _ordered_multiselect_app z-index

--- a/app/assets/stylesheets/folio/console/modules/react/_ordered_multiselect_app.sass
+++ b/app/assets/stylesheets/folio/console/modules/react/_ordered_multiselect_app.sass
@@ -11,6 +11,7 @@
   line-height: $input-line-height
   min-height: 49px
   position: relative
+  z-index: 101 // above redactor toolbar
 
 .f-c-r-ordered-multiselect-app
   &__item
